@@ -2,23 +2,20 @@
 
 PROG="$1"
 
+rm -rf testoutput
 mkdir -p testoutput
 
 TEST=testoutput
 SIM=simulations/simulation_c1.txt
 
-cat $SIM | grep '^{' > $TEST/test_expected.txt
+$PROG --oneshot --verbose $SIM MyHeater multical302 67676767 NOKEY MyTapWater multical21 76348799 NOKEY > $TEST/test_output.txt
 
-$PROG --oneshot $SIM MyHeater multical302 '*' '' MyTapWater multical21 76348799 '' > $TEST/test_output.txt
+RES=$(cat $TEST/test_output.txt | grep -o "(main) all meters have received at least one update, stopping." | tail -n 1)
 
-RES=$(cat $TEST/test_output.txt | grep -o "all meters have received at least one update, stopping.")
-
-cat $TEST/test_output.txt
-
-if [ "$RES" = "all meters have received at least one update, stopping." ]
+if [ "$RES" = "(main) all meters have received at least one update, stopping." ]
 then
-    echo Oneshot OK
+    echo OK: Test oneshot
 else
-    echo Fail oneshot check!
+    echo ERROR Fail oneshot check!
     exit 1
 fi
